# backend-magnasight-fastapi

./: .env  .env.production.example  .gitignore  DATABASE_UPDATE_INSTRUCTIONS.md  Dockerfile  database.py  dev-fairuz-agiza-b3ab99c6101b.json  docker-compose.yml  main.py  mysql_to_postgres.load  pyproject.toml  requirements.txt  setup-env.sh
.github/workflows/: deploy.yml
fast-api-training/: README.md  pyproject.toml
fast-api-training/app/: crud.py  database.py  main.py  models.py  schemas.py
helpers/: helpers.js
routes/: customers.py  groups.py  projects.py  services.py  tickets.py  users.py
static/: google-signin.html
templates/: reset_password_email.html  ticket_close_email.html  ticket_email.html  verification_email.html
